# Gazebo-Testing-Platform

./: .gitignore  .gitmodules  Dockerfile  readme.md
src/move_grid/: CMakeLists.txt  package.xml  setup.py
src/move_grid/command/: decode.py  movement.txt
src/move_grid/config/: params.yml
src/move_grid/launch/: move.launch
src/move_grid/rviz/: move.rviz
src/move_grid/scripts/: grid_decode  move_grid  move_grid.py
src/move_grid/srv/: GridCmd.srv
src/robot_controller/: CMakeLists.txt
src/robot_controller/launch/: control.launch
src/robot_controller/src/: robot_controller_node.cpp
src/robot_mapping/: package.xml
src/robot_mapping/launch/: gmapping.launch
src/robot_mapping/maps/: map.pgm  map.yaml  simple-cylinder-real.pgm  simple-cylinder-real.yaml  simple-real.pgm  simple-real.yaml  simple.pgm
src/robot_mapping/rviz/: map.rviz
src/robot_navigation/: package.xml
src/robot_navigation/launch/: navigation.launch
src/robot_navigation/rviz/: nav.rviz
src/simulation_interface/: CMakeLists.txt  package.xml
src/simulation_interface/launch/: launch.launch
src/simulation_interface/scripts/: odom2tf.py
src/simulation_interface/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/simulation_interface/worlds/: simple-2.sdf  simple-cylinder.sdf  simple.sdf  simple.world  world-1
